handle CSP violations

--- a/product-api/src/main/resources/templates/index.html
+++ b/product-api/src/main/resources/templates/index.html
@@ -6,6 +6,16 @@
 </head>
 <body>
 <h1>Welcome to Damo Partner Portal</h1>
+
+<div class="image-container">
+    <img src="https://upload.wikimedia.org/wikipedia/en/4/42/Beatles_-_Abbey_Road.jpg" alt="Abbey Road" style="max-width: 100%; height: auto;">
+</div>
+
+<div class="image-container">
+    <img src="https://revolverwarholgallery.com/wp-content/uploads/2022/11/Warhol-and-the-VU.jpg.webp" alt="Velvet Underground" style="max-width: 100%; height: auto;">
+</div>
+
+
 <div class="buttons">
     <a href="/portal/products">View Products</a>
     <a href="/portal/add-product">Add Product</a>
